@@ -1,10 +1,13 @@
-2019-01-07  Fred Kiefer <fredkiefer@gmx.de>
+2019-07-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Tests/base/GSTLS/basic.m: Use fixed time zone.
+
+2019-07-01  Fred Kiefer <fredkiefer@gmx.de>
 
 	* Source/GSXML.m (fatalErrorFunction): Use correct function to get
 	line number.
 	* Source/NSOperation.m (_execute): Surround with NS_DURING to free
 	lock on error.
-
 2019-06-11  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Headers/GNUstepBase/GSIArray.h:
